# JJJetson_Ops

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_all.sh  environment.yml  pyproject.toml  run_tests.sh
.github/workflows/: pre-commit.yml
doc/: baseline-perf.md  correctness.md  moe_dispatch_example.md  moe_pipeline_example.md
include/: cublas_utils.cuh  cuda_utils.cuh  cuda_utils.h  device_hw_info.cuh  kv_cache.h  linear.h  moe_cuda_graph_cache.h  moe_cuda_graph_instance_container.h  moe_pipeline_sota.h  moe_runner.h  rope_cossin_cache.h  softmax-gdb.cuh  softmax-last.cuh  swiglu.h  transformer_runner.h  utils.h
scripts/: check_code_style.sh  format_code.sh
src/bindings/: CMakeLists.txt  cpy_continue_binding.cpp  cpy_transpose_binding.cpp  fa_binding.cpp  fa_tc_binding.cpp  flash_attention_binding.cpp  gated_unary_binding.cpp  layer_norm_binding.cpp  linear_binding.cpp  mm_q4_0_q8_1_binding.cpp  moe_combine_binding.cpp  moe_combine_sota_binding.cpp  moe_cuda_graph_cache_binding.cpp  moe_cuda_graph_instance_container_binding.cpp  moe_dispatch_binding.cpp  moe_dispatch_sota_binding.cpp  moe_pipeline_binding.cpp  moe_pipeline_sota_binding.cpp  moe_runner_binding.cpp  moe_swiglu_experts_binding.cpp  moe_top_k_binding.cpp  q8_1_binding.cpp  rms_norm_binding.cpp  rms_norm_fused_add_binding.cpp  roll_binding.cpp  rope_neox_binding.cpp  rope_neox_global_cache_binding.cpp  rope_neox_search_table_binding.cpp  top_k_moe_binding.cpp  transformer_runner_binding.cpp
src/cuda/: CMakeLists.txt  README.md  cpy_continue.cu  cpy_transpose.cu  fa_double_buffer.cu  fa_one_pass.cu  fa_one_pass_parallel.cu  fa_one_pass_parallel_tc.cu  fa_one_pass_parallel_tc_true.cu  fa_one_pass_parallel_tc_true_64.cu  fa_two_pass.cu  flash_attention.cu  gated_unary.cu  kv_cache.cu  layer_norm.cu  linear.cu  mm_q4_0_q8_1.cu  moe_combine.cu  moe_combine_sota.cu  moe_cuda_graph_cache.cu  moe_dispatch.cu  moe_dispatch_sota.cu  moe_runner.cu  moe_swiglu_experts.cu  moe_top_k.cu  q8_1.cu  rms_norm.cu  rms_norm_fused_add.cu  roll.cu  rope_neox.cu  rope_neox_global_cache.cu  rope_neox_search_table.cu  swiglu.cu  top_k_moe.cu
src/cuda/fa/: CMakeLists.txt  fa_double_buffer.cu  fa_one_pass.cu  fa_one_pass_parallel.cu  fa_one_pass_parallel_tc.cu  fa_one_pass_parallel_tc_true.cu  fa_two_pass.cu
src/cuda/moe/: CMakeLists.txt  moe_combine.cu  moe_dispatch.cu  moe_dispatch_sota.cu  moe_pipeline_sota.cu  moe_pipline.cu  moe_top_k.cu
src/engine/: CMakeLists.txt  moe_cuda_graph_cache.cpp  moe_cuda_graph_instance_container.cpp  moe_runner.cpp  transformer_runner.cpp
src/model/: CMakeLists.txt  kv_cache.cpp  rope_cossin_cache.cpp
tests/: check_correctness.md  fa_test_common.py  rope_test_common.py  run_Dao.py  test_cpy_continue.py  test_cpy_transpose.py  test_fa_double_buffer.py  test_fa_one_pass.py  test_fa_one_pass_parallel.py  test_fa_one_pass_parallel_tc.py  test_fa_one_pass_parallel_tc_true.py  test_fa_one_pass_parallel_tc_true_64.py  test_fa_tc.py  test_fa_two_pass.py  test_flash_attention.py  test_gated_unary.py  test_layer_norm.py  test_linear.py  test_moe_combine.py  test_moe_combine_sota.py  test_moe_cuda_graph_cache.py  test_moe_cuda_graph_instance_container.py  test_moe_dispatch.py  test_moe_pipeline.py  test_moe_pipeline_sota.py  test_moe_runner.py  test_moe_top_k.py  test_q8_1.py  test_rms_norm.py  test_rms_norm_fused_add.py  test_roll.py  test_rope.py  test_rope_global_cache.py  test_rope_search_table.py  test_topk_moe.py  test_transformer_runner.py  utils.py
tools/: show_device_info.cu
